--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
